services and details

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,7 @@
 .hospitalTittle{
     color: blueviolet;
 }
-.container{
-    background-color: blueviolet;
-}
+
 .mineContainer{
-    background-color: blueviolet;
+    background-color: rgb(129, 14, 236);
 }
